Fix for tab overflow gap, proper colors

--- a/sass/consts/_colors.sass
+++ b/sass/consts/_colors.sass
@@ -1,3 +1,5 @@
-// TODO: Color scheme
+// Color scheme
 
-$bgmain: grey
+$bgmain: #505050
+$bgmain_border: rgba(80, 80, 80, 0.5)
+$bgmain_border_selected: rgba(80, 80, 80, 1)
