--- a/sass/tabs/_spacing.sass
+++ b/sass/tabs/_spacing.sass
@@ -1,9 +1,9 @@
 .tabbrowser-tab 
+    // 29px is the height of the svg
     max-height: 29px !important
     min-height: 29px !important
     height: 29px !important
-    // 29px is the height of the svg
-    margin-top: 10px !important
+    padding-top: (29px - 20px) !important
 
     &:first-child // old Chrome had a small gap near the start of the browser
         margin-left: 10px !important
